tekton/1-Install/5-dashboard-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-dashboard-auth
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-dashboard-auth
  template:
    metadata:
      labels:
        app: tekton-dashboard-auth
    spec:
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://tekton-dashboard.tekton-pipelines.svc.cluster.local:9097
        - --http-address=$(HOST_IP):8080
        - --redirect-url=https://tekton.cluster.fun/oauth2/callback
        - --email-domain=marcusnoble.co.uk
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQN
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.1
        name: oauth-proxy
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-dashboard-auth
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard-auth
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tekton-dashboard-auth
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard-auth
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - tekton.cluster.fun
    secretName: tekton-dashboard-ingress
  rules:
  - host: tekton.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: tekton-dashboard-auth
          servicePort: 80
